# yakuza-0-headtracking

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES.md  camera_hook.asm  launcher-manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
scripts/: deploy.ps1  install.cmd  package-release.ps1  release-nightly.ps1  release.ps1  uninstall.cmd  update-deps.ps1
src/: camera_hook.cpp  camera_hook.h  camera_telemetry.cpp  camera_telemetry.h  dllmain.cpp  gameplay_cameras.h  logging.h  mod.cpp  mod.h  mod_config.cpp  mod_config.h  view_math.h
tests/: CMakeLists.txt  test_main.cpp  view_math_tests.cpp
